WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236819
[GTK] Debian Stable build is broken after
r290026
https://bugs.webkit.org/show_bug.cgi?id=236819
Summary
[GTK] Debian Stable build is broken after r290026
Diego Pino
Reported
2022-02-17 17:46:34 PST
[GTK] Debian Stable build is broken after
r290026
Attachments
[fast-cq] Patch
(1.92 KB, patch)
2022-02-17 17:47 PST
,
Diego Pino
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Diego Pino
Comment 1
2022-02-17 17:47:32 PST
Created
attachment 452457
[details]
[fast-cq] Patch
Diego Pino
Comment 2
2022-02-17 17:49:11 PST
Build error from Debian Stable build bot (
https://build.webkit.org/#/builders/46/builds/11343/steps/8/logs/stdio
): ../../Source/WebKit/UIProcess/API/APIWebsitePolicies.cpp:62:80: error: no matching function for call to ‘API::WebsitePolicies::setLegacyCustomHeaderFields(WTF::Vector<WTF::Vector<WebCore::HTTPHeaderField>, 0, WTF::CrashOnOverflow, 16, WTF::FastMalloc>)’ policies->setLegacyCustomHeaderFields(Vector { m_legacyCustomHeaderFields }); ^ In file included from ../../Source/WebKit/UIProcess/API/APIWebsitePolicies.cpp:27, from DerivedSources/WebKit/unified-sources/UnifiedSource-88d1702b-13.cpp:2: ../../Source/WebKit/UIProcess/API/APIWebsitePolicies.h:81:10: note: candidate: ‘void API::WebsitePolicies::setLegacyCustomHeaderFields(WTF::Vector<WebCore::HTTPHeaderField>&&)’ void setLegacyCustomHeaderFields(Vector<WebCore::HTTPHeaderField>&& fields) { m_legacyCustomHeaderFields = WTFMove(fields); } ^~~~~~~~~~~~~~~~~~~~~~~~~~~
EWS
Comment 3
2022-02-17 19:32:57 PST
Committed
r290106
(
247452@main
): <
https://commits.webkit.org/247452@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 452457
[details]
.
Radar WebKit Bug Importer
Comment 4
2022-02-17 19:33:36 PST
<
rdar://problem/89123005
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug