[GTK] Debian Stable build is broken after r290026 https://bugs.webkit.org/show_bug.cgi?id=236819

Unreviewed build fix.


* UIProcess/API/APIWebsitePolicies.cpp:
(API::WebsitePolicies::copy const):



Canonical link: https://commits.webkit.org/247452@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290106 268f45cc-cd09-0410-ab3c-d52691b4dbfc